Fix profile menu z-index and functionality.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,12 +31,14 @@
 #main_menu.navbar {
   background-color: #333;
   height: 40px;
+  z-index: 999;
 }
 
 .sub_menu.navbar {
   background-color: #505050;
   position: fixed;
   height: 30px;
+  z-index: 999;
 }
 
 .sub_menu .nav-link {
